[package]
name = "chip8"
version = "0.1.0"
authors = ["Starr Horne <starr@chromahq.com>"]

[dependencies]
rand = "0.3.15"

[target.'cfg(target_os = "linux")'.dependencies.sdl2]
version = "0.37"
default-features = false
features = ["gfx"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg" 
rev = "501db0f"  

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
